# Rustsocks

./: Cargo.toml  LICENSE  README.md
src/: bsd.rs  config.rs  lib.rs  main.rs  net.rs  redir_ext.rs  sys.rs
src/redir/: bsd_pf.rs  mod.rs  pfvar_bindgen_macos.rs  redir_ext.rs  sys.rs
src/tcp_relay/: bsd.rs
src/udp_relay/: checker.rs  macos.rs  manager.rs  mod.rs  receive.rs  send.rs
src/utils/: config.rs  expiry_map.rs  mod.rs  net.rs  raw_socket.rs
src/utils/socks/: mod.rs  socks5.rs  tcp_client.rs  udp_client.rs
