[package]
name = "rustsocks"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.172"
log = "0.4.27"
nix = { version = "0.30.1", features = ["ioctl"] }
once_cell = "1.21.3"
socket2 = "0.5.9"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tokio-socks = "0.5.2"
