[package]
name = "rustsocks"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
cfg-if = "1.0.0"
dashmap = "6.1.0"
env_logger = "0.11.8"
futures = "0.3.31"
libc = "0.2.172"
log = "0.4.27"
lru_time_cache = "0.11.11"
nix = { version = "0.30.1", features = ["ioctl"] }
pin-project = "1.1.10"
rand = "0.9.2"
socket2 = "0.5.9"
thiserror = "2.0.17"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
